# simple-https-client-esp32

./: Cargo.toml
.cargo/: config.toml
