[package]
edition      = "2024"
name         = "Part_1"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "Part_1"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "=1.0.0-rc.1", features = ["defmt", "esp32", "unstable"] }

esp-rtos = { version = "0.1.1", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32",
] }



defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32"] }

embassy-net = { version = "0.7.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.0", features = [
  "defmt",
  "esp32",
  "panic-handler",
] }
esp-println = { version = "0.16.0", features = ["defmt-espflash", "esp32"] }
# for more networking protocol support see https://crates.io/crates/edge-net
bt-hci = "0.6.0"
embassy-executor = { version = "0.9.0", features = ["defmt" ] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-radio = { version = "0.16.0", features = [
  "ble",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
trouble-host = { version = "0.5.0", features = [
    "gatt", 
    "defmt",
    "default-packet-pool-mtu-255",
    "derive",
    "scan",
] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
reqwless = {version = "0.13.0" , features = ["defmt", "embedded-tls"]}
microjson = "0.1.6"
# esp-hal-buzzer = { version = "0.2.0", features = ["defmt", "esp32"] }
esp-hal-buzzer = {git = "https://github.com/KapJ1coH/esp-hal-community.git", version = "0.2.0", features = ["defmt", "esp32"] }
ssd1306 = { version = "0.10.0", features = ["async"] }
heapless = { version = "0.9.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
arrform = "0.1.1"
nanofish = { version = "0.9.1", features = ["tls"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
